--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "ts_template",
-  "version": "0.0.2",
-  "description": "ts template",
+  "name": "chrome_extension_template",
+  "version": "0.0.1",
+  "description": "chrome extension template",
   "main": "index.js",
   "private": "true",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.ts",
+    "build": "webpack --config webpack.config.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yusuke Mitsui",
   "license": "MIT",
   "devDependencies": {
+    "@types/html-webpack-plugin": "^3.2.5",
     "@types/lodash": "~4.14.168",
+    "@types/webpack-dev-server": "^3.11.4",
     "copy-webpack-plugin": "~8.1.1",
     "css-loader": "~5.2.0",
     "html-webpack-plugin": "~5.3.1",
@@ -20,6 +22,7 @@
     "sass-loader": "~11.0.1",
     "style-loader": "~2.0.0",
     "ts-loader": "~8.1.0",
+    "ts-node": "^10.0.0",
     "typescript": "~4.2.3",
     "web-dev-server": "~3.0.22",
     "webpack": "~5.30.0",
