--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,11 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node"
+  },
+  "ts-node": {
+    "compilerOptions": {
+      "target": "es6",
+      "module": "CommonJS"
+    }
   }
 }
