--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
   "scripts": {
     "start": "webpack serve --config webpack.config.ts",
     "build": "webpack --config webpack.config.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "webpack --config webpack.config.js",
+    "test_ts": "webpack --config webpack.config.002.ts"
   },
   "author": "Yusuke Mitsui",
   "license": "MIT",
   "devDependencies": {
+    "@types/chrome": "^0.0.145",
+    "@types/copy-webpack-plugin": "^8.0.0",
     "@types/html-webpack-plugin": "^3.2.5",
     "@types/lodash": "~4.14.168",
     "@types/webpack-dev-server": "^3.11.4",
-    "copy-webpack-plugin": "~8.1.1",
+    "copy-webpack-plugin": "^9.0.0",
     "css-loader": "~5.2.0",
     "html-webpack-plugin": "~5.3.1",
     "sass": "~1.32.8",
@@ -25,6 +28,7 @@
     "ts-node": "^10.0.0",
     "typescript": "~4.2.3",
     "web-dev-server": "~3.0.22",
+    "webextension-polyfill-ts": "^0.25.0",
     "webpack": "~5.30.0",
     "webpack-cli": "~4.6.0",
     "webpack-dev-server": "^3.11.2"
