--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "devDependencies": {
     "@types/chrome": "^0.0.145",
     "@types/copy-webpack-plugin": "^8.0.0",
+    "@types/elm": "^0.19.0",
     "@types/html-webpack-plugin": "^3.2.5",
     "@types/lodash": "~4.14.168",
     "@types/webpack-dev-server": "^3.11.4",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "~5.2.0",
+    "elm-hot-webpack-loader": "^1.1.8",
+    "elm-webpack-loader": "^8.0.0",
     "html-webpack-plugin": "~5.3.1",
+    "path-browserify": "^1.0.1",
     "sass": "~1.32.8",
     "sass-loader": "~11.0.1",
     "style-loader": "~2.0.0",
