--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.config.ts",
     "build": "webpack --config webpack.config.ts",
-    "build_opt": "webpack --config webpack.config-optimize.ts"
+    "build_opt": "rm -rf ./prod && webpack --config webpack.config-optimize.ts"
   },
   "author": "Yusuke Mitsui",
   "license": "MIT",
